lib/src/compiler/tests/testdata/errors/131.out
error[E001]: syntax error
 --> line:3:8
  |
3 |   $a = "foo
  |        ^^^^ unclosed literal string
  |